Added first header

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>CSE 204 - Assignment 02 Personal Bio</title>
+    </head>
+
+    <body>
+        <h1>CHARLOTTE LUCAS  BARRINGTON, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</h1>
+        <p>
+            <strong >My name is:</strong>
+            Charlotte Lucas
+        </p>
+        <p>
+            <strong>My email address is:</strong>
+            c.k.lucas@wustl.edu
+        </p>
+        <p>
+            <strong>I am taking this class because:</strong>
+            I am interested in learning more html because I have not had a chance in other classes. I am also interested because I would like to be able to make my own webpages.
+        </p>
+    </body>
+</html>
+
 
