--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
 
     <body>
-        <h1>CHARLOTTE LUCAS  BARRINGTON, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</h1>
+        <h1>CHARLOTTE LUCAS        Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</h1>
         <p>
-            <strong >My name is:</strong>
-            Charlotte Lucas
+            <strong >ASPIRING COMPUTER ENGINEER </strong>
+            leveraging academic experience in conjunction with computer science, critical thinking, and project management skills to design new software programs while guiding teams of students in devising and developing advanced solutions in computer engineering. Detail-oriented engineering student with a proven ability to evaluate complex programs and code to ultimately produce high-functioning software and websites. Determined team player with a history of collaborating with instructional staff to facilitate productive class sessions and drive academic success.
         </p>
         <p>
             <strong>My email address is:</strong>
