Added unordered list

--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>CSE 204 - Assignment 02 Personal Bio</title>
     </head>
 
     <body>
-        <h1>CHARLOTTE LUCAS        Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</h1>
+        <h1>CHARLOTTE LUCAS        Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</h1> <!--figure out spacing-->
         <p>
-            <strong >ASPIRING COMPUTER ENGINEER </strong>
+            <strong>ASPIRING COMPUTER ENGINEER</strong>
             leveraging academic experience in conjunction with computer science, critical thinking, and project management skills to design new software programs while guiding teams of students in devising and developing advanced solutions in computer engineering. Detail-oriented engineering student with a proven ability to evaluate complex programs and code to ultimately produce high-functioning software and websites. Determined team player with a history of collaborating with instructional staff to facilitate productive class sessions and drive academic success.
         </p>
+        <h2>Areas of Expertise</h2>
+        <ul>
+            <li>Software Development</li> <!--figure out layout-->
+            <li>Computer Engineering</li>
+            <li>Critical Thinking</li>
+            <li>Systems Engineering</li>
+            <li>Teaching & Development</li>
+            <li>Computer Science</li>
+            <li>Code Review</li>
+            <li>Project Management</li>
+            <li>Team Leadership</li>
+          </ul>
         <p>
             <strong>My email address is:</strong>
             c.k.lucas@wustl.edu
