Added bold and italic

--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     <body>
         <h1>CHARLOTTE LUCAS        Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</h1> <!--figure out spacing-->
         <p>
-            <strong>ASPIRING COMPUTER ENGINEER</strong>
+            <strong>ASPIRING COMPUTER ENGINEER</strong> <!--figure out strong vs subheader-->
             leveraging academic experience in conjunction with computer science, critical thinking, and project management skills to design new software programs while guiding teams of students in devising and developing advanced solutions in computer engineering. Detail-oriented engineering student with a proven ability to evaluate complex programs and code to ultimately produce high-functioning software and websites. Determined team player with a history of collaborating with instructional staff to facilitate productive class sessions and drive academic success.
         </p>
-        <h2>Areas of Expertise</h2>
-        <ul>
-            <li>Software Development</li> <!--figure out layout-->
-            <li>Computer Engineering</li>
-            <li>Critical Thinking</li>
-            <li>Systems Engineering</li>
-            <li>Teaching & Development</li>
-            <li>Computer Science</li>
-            <li>Code Review</li>
-            <li>Project Management</li>
-            <li>Team Leadership</li>
+        <h2>Areas of Expertise</h2><ul>
+            <li>Software Development</li> <!--figure out layout, see if you can add checkmarks instead-->
+            <li>Computer Engineering</li> <li>Critical Thinking</li>
+            <li>Systems Engineering</li> <li>Teaching & Development</li> <li>Computer Science</li>
+            <li>Code Review</li> <li>Project Management</li> <li>Team Leadership</li>
           </ul>
+        <h2>Education</h2>
         <p>
-            <strong>My email address is:</strong>
-            c.k.lucas@wustl.edu
+            <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Engineering (GPA: 3.95)</b>
+            <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Science | Minor in History</b>
+            Washington University, St. Louis
+            <b>Key Coursework:</b>
+            Intro to Electrical and Systems Engineering | Intro to Electrical and Electronic Circuits | Systems Security
+            Intro to Computer Engineering | Data Structures and Algorithms | Digital Logic and Computer Design
+            Intro to Electronic Circuits |Computer Architecture | Object-Oriented Software Development
+            Intro to Systems Software | Intro to Computer Security | Computer Systems Design | Technical Writing
         </p>
         <p>
             <strong>I am taking this class because:</strong>
