Added line breaks

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
           </ul>
         <h2>Education</h2>
         <p>
-            <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Engineering (GPA: 3.95)</b>
-            <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Science | Minor in History</b>
-            Washington University, St. Louis
-            <b>Key Coursework:</b>
-            Intro to Electrical and Systems Engineering | Intro to Electrical and Electronic Circuits | Systems Security
-            Intro to Computer Engineering | Data Structures and Algorithms | Digital Logic and Computer Design
-            Intro to Electronic Circuits |Computer Architecture | Object-Oriented Software Development
-            Intro to Systems Software | Intro to Computer Security | Computer Systems Design | Technical Writing
+            <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Engineering (GPA: 3.95)</b> <br>
+            <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Science | Minor in History</b> <br>
+            Washington University, St. Louis <br>
+            <b>Key Coursework:</b> <br>
+            Intro to Electrical and Systems Engineering | Intro to Electrical and Electronic Circuits | Systems Security <br>
+            Intro to Computer Engineering | Data Structures and Algorithms | Digital Logic and Computer Design <br>
+            Intro to Electronic Circuits |Computer Architecture | Object-Oriented Software Development <br>
+            Intro to Systems Software | Intro to Computer Security | Computer Systems Design | Technical Writing <br>
         </p>
         <p>
             <strong>I am taking this class because:</strong>
@@ -34,5 +34,18 @@
         </p>
     </body>
 </html>
+
+<!--
+Title                                               check
+Headings (with at least one sub-heading)            check
+Paragraphs                                          check
+Bold or Strong                                      check
+Italic or Emphasis                                  check
+Horizontal Rule
+Unordered List or Ordered List                      check
+Links - at least one link to an external website.
+Doctype
+A header & footer, with appropriate content.
+-->
 
 
