Added horizontal rule

--- a/index.html
+++ b/index.html
@@ -7,31 +7,44 @@
 
     <body>
         <h1>CHARLOTTE LUCAS        Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</h1> <!--figure out spacing-->
+        <hr>
         <p>
             <strong>ASPIRING COMPUTER ENGINEER</strong> <!--figure out strong vs subheader-->
             leveraging academic experience in conjunction with computer science, critical thinking, and project management skills to design new software programs while guiding teams of students in devising and developing advanced solutions in computer engineering. Detail-oriented engineering student with a proven ability to evaluate complex programs and code to ultimately produce high-functioning software and websites. Determined team player with a history of collaborating with instructional staff to facilitate productive class sessions and drive academic success.
         </p>
-        <h2>Areas of Expertise</h2><ul>
+        <hr>
+        <h2>Areas of Expertise</h2>
+        <ul>
             <li>Software Development</li> <!--figure out layout, see if you can add checkmarks instead-->
             <li>Computer Engineering</li> <li>Critical Thinking</li>
             <li>Systems Engineering</li> <li>Teaching & Development</li> <li>Computer Science</li>
             <li>Code Review</li> <li>Project Management</li> <li>Team Leadership</li>
           </ul>
+        <hr>
         <h2>Education</h2>
         <p>
             <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Engineering (GPA: 3.95)</b> <br>
             <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Science | Minor in History</b> <br>
             Washington University, St. Louis <br>
+            <br>
             <b>Key Coursework:</b> <br>
             Intro to Electrical and Systems Engineering | Intro to Electrical and Electronic Circuits | Systems Security <br>
             Intro to Computer Engineering | Data Structures and Algorithms | Digital Logic and Computer Design <br>
             Intro to Electronic Circuits |Computer Architecture | Object-Oriented Software Development <br>
             Intro to Systems Software | Intro to Computer Security | Computer Systems Design | Technical Writing <br>
         </p>
+        <hr>
+        <h2>Professional Experience</h2>
         <p>
-            <strong>I am taking this class because:</strong>
-            I am interested in learning more html because I have not had a chance in other classes. I am also interested because I would like to be able to make my own webpages.
+            <strong>Lavner Education</strong> - St. Louis, MO <strong>06/2023 - 08/2023</strong><br><!--figure out spacing-->
+            <i>Information Technology (IT) Intern</i>
         </p>
+            <ul>
+                <li>Prepared and delivered educational STEM-focused lessons to students including adding supplemental material as needed and using interpersonal communication skills to drive engagement. </li>
+                <li>Taught a variety of different topics such as coding in C++ and Python, as well as cybersecurity.</li>
+                <li>Assisted with debugging code, project backup, and setup and maintenance of on-site computer hardware, software, and Internet connectivity.</li>
+                <li>Provided troubleshooting and technical support to staff and students as needed and delivered educational instruction to students in the class and during lessons.</li>
+            </ul>
     </body>
 </html>
 
