Added experience paragraph

--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
                 <li>Assisted with debugging code, project backup, and setup and maintenance of on-site computer hardware, software, and Internet connectivity.</li>
                 <li>Provided troubleshooting and technical support to staff and students as needed and delivered educational instruction to students in the class and during lessons.</li>
             </ul>
+        <p>
+            <strong>Washington University in St. Louis</strong> - St. Louis, MO <strong>01/2021 - 05/2023</strong><br><!--figure out spacing-->
+            <i>Teaching Assistant (Intro to Computer Engineering/Intro to Digital Logic & Computer Design</i>
+        </p>
+            <ul>
+                <li>Assisted in the instruction of the courses, assessing student coding work, technical homework, and process diagrams to ensure correct formulations and guarantee system functionality.</li>
+                <li>Provided guidance to students working through troubleshooting technical errors, promoting critical thinking and problem-solving skills, and preparing the class for success on course assessments</li>
+            </ul>
+        <p>
+            <i><u>Additional Experience: </u></i><br>
+            <b>Nubs Nob</b> | Ski Instructor <b>12/2019 - 01/2023</b><br>
+            <b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager <b>03/2017 - 08/2022</b><br>
+        </p>
     </body>
 </html>
 
@@ -54,10 +67,10 @@ Headings (with at least one sub-heading)            check
 Paragraphs                                          check
 Bold or Strong                                      check
 Italic or Emphasis                                  check
-Horizontal Rule
+Horizontal Rule                                     check
 Unordered List or Ordered List                      check
 Links - at least one link to an external website.
-Doctype
+Doctype                                             check
 A header & footer, with appropriate content.
 -->
 
