Added honors paragraph

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </ul>
         <p>
             <strong>Washington University in St. Louis</strong> - St. Louis, MO <strong>01/2021 - 05/2023</strong><br><!--figure out spacing-->
-            <i>Teaching Assistant (Intro to Computer Engineering/Intro to Digital Logic & Computer Design</i>
+            <i>Teaching Assistant (Intro to Computer Engineering/Intro to Digital Logic &amp; Computer Design)</i>
         </p>
             <ul>
                 <li>Assisted in the instruction of the courses, assessing student coding work, technical homework, and process diagrams to ensure correct formulations and guarantee system functionality.</li>
@@ -55,8 +55,20 @@
             </ul>
         <p>
             <i><u>Additional Experience: </u></i><br>
-            <b>Nubs Nob</b> | Ski Instructor <b>12/2019 - 01/2023</b><br>
+            <b>Nubs Nob</b> | Ski Instructor <b>12/2019 - 01/2023</b><br>   <!--figure out spacing-->
             <b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager <b>03/2017 - 08/2022</b><br>
+        </p>
+        <h2>AFFILIATIONS &amp; AWARDS</h2>
+        <p>
+            Encouncil - <i>VP/Programming Chair &amp; Vertigo Sub-Chair: Sound &amp; Power</i><br>
+            Women in Computer Science (WICS) - <i>Member</i><br>
+            Society of Women Engineers (SWE) - <i>Member</i><br>
+            String Theory - <i>Member</i><br>
+            <u>Honors:</u> President's Service Award | Illinois State Scholar | Outstanding Science Seniors 2020
+        </p>
+        <h2>TECHNICAL SKILLS</h2>
+        <p>
+            MATLAB | Google Suite | Java | C++ | R | Python | Assembly | VDHL | C | JavaScript | C# | PHP
         </p>
     </body>
 </html>
