Attempt to make checks

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>CSE 204 - Assignment 02 Personal Bio</title>
+        ul:first-child  li:before { content:"\2713\0020"; }
     </head>
 
     <body>
@@ -58,6 +59,7 @@
             <b>Nubs Nob</b> | Ski Instructor <b>12/2019 - 01/2023</b><br>   <!--figure out spacing-->
             <b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager <b>03/2017 - 08/2022</b><br>
         </p>
+        <hr>
         <h2>AFFILIATIONS &amp; AWARDS</h2>
         <p>
             Encouncil - <i>VP/Programming Chair &amp; Vertigo Sub-Chair: Sound &amp; Power</i><br>
@@ -66,6 +68,7 @@
             String Theory - <i>Member</i><br>
             <u>Honors:</u> President's Service Award | Illinois State Scholar | Outstanding Science Seniors 2020
         </p>
+        <hr>
         <h2>TECHNICAL SKILLS</h2>
         <p>
             MATLAB | Google Suite | Java | C++ | R | Python | Assembly | VDHL | C | JavaScript | C# | PHP
