--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>CSE 204 - Assignment 02 Personal Bio</title>
-        ul:first-child  li:before { content:"\2713\0020"; }
+        <style>
+            ul:first-child  li:before { content:"\2713\0020"; }
+        </style>
     </head>
 
     <body>
@@ -72,6 +74,11 @@
         <h2>TECHNICAL SKILLS</h2>
         <p>
             MATLAB | Google Suite | Java | C++ | R | Python | Assembly | VDHL | C | JavaScript | C# | PHP
+        </p>
+        <hr>
+        <h2>LINKEDIN</h2> <!--see if you can add company logo-->
+        <p>
+            <a>https://www.linkedin.com/in/charlotteklucas/</a>
         </p>
     </body>
 </html>
