Fixed external link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>CSE 204 - Assignment 02 Personal Bio</title>
         <style>
             ul:first-child  li:before { content:"\2713\0020"; }
+            #triple li { width:33.333%; }
         </style>
     </head>
 
@@ -17,7 +18,7 @@
         </p>
         <hr>
         <h2>Areas of Expertise</h2>
-        <ul>
+        <ul id="triple">
             <li>Software Development</li> <!--figure out layout, see if you can add checkmarks instead-->
             <li>Computer Engineering</li> <li>Critical Thinking</li>
             <li>Systems Engineering</li> <li>Teaching & Development</li> <li>Computer Science</li>
@@ -78,7 +79,7 @@
         <hr>
         <h2>LINKEDIN</h2> <!--see if you can add company logo-->
         <p>
-            <a>https://www.linkedin.com/in/charlotteklucas/</a>
+            <a href="https://www.linkedin.com/in/charlotteklucas/">Visit Charlotte Lucas' LinkedIn</a>
         </p>
     </body>
 </html>
