--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
         <meta charset="utf-8">
         <title>CSE 204 - Assignment 02 Personal Bio</title>
         <style>
-            ul:first-child  li:before { content:"\2713\0020"; }
-            #triple li { width:33.333%; }
+            ul li{
+                float: left;
+                width: 33.33%;
+            }
+            ul{
+                list-style-type: disc;
+            }
         </style>
     </head>
 
@@ -81,6 +86,9 @@
         <p>
             <a href="https://www.linkedin.com/in/charlotteklucas/">Visit Charlotte Lucas' LinkedIn</a>
         </p>
+        <footer>
+            <p>Author: Charlotte Lucas <a href="c.k.lucas@wustl.edu">c.k.lucas@wustl.edu</a></p>
+          </footer>
     </body>
 </html>
 
@@ -95,6 +103,8 @@ Unordered List or Ordered List                      check
 Links - at least one link to an external website.
 Doctype                                             check
 A header & footer, with appropriate content.
+ul:first-child  li:before { content:"\2713\0020"; }
+            #triple li { width:33.333%; }
 -->
 
 
