--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 float: left;
                 width: 33.33%;
             }
+            ul li:before { content:"\2713\0020"; }
             ul{
                 list-style-type: disc;
             }
@@ -15,7 +16,10 @@
     </head>
 
     <body>
+        <header>
         <h1>CHARLOTTE LUCAS        Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</h1> <!--figure out spacing-->
+        <p>resume as of January 2024</p>
+        </header>
         <hr>
         <p>
             <strong>ASPIRING COMPUTER ENGINEER</strong> <!--figure out strong vs subheader-->
@@ -23,7 +27,7 @@
         </p>
         <hr>
         <h2>Areas of Expertise</h2>
-        <ul id="triple">
+        <ul>
             <li>Software Development</li> <!--figure out layout, see if you can add checkmarks instead-->
             <li>Computer Engineering</li> <li>Critical Thinking</li>
             <li>Systems Engineering</li> <li>Teaching & Development</li> <li>Computer Science</li>
@@ -86,9 +90,10 @@
         <p>
             <a href="https://www.linkedin.com/in/charlotteklucas/">Visit Charlotte Lucas' LinkedIn</a>
         </p>
+        <hr>
         <footer>
             <p>Author: Charlotte Lucas <a href="c.k.lucas@wustl.edu">c.k.lucas@wustl.edu</a></p>
-          </footer>
+        </footer>
     </body>
 </html>
 
