Attempt to fix formatting in list

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>CSE 204 - Assignment 02 Personal Bio</title>
         <style>
-            ul li{
+            ul:first-child li{
                 float: left;
                 width: 33.33%;
             }
@@ -18,7 +18,7 @@
     <body>
         <header>
         <h1>CHARLOTTE LUCAS        Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</h1> <!--figure out spacing-->
-        <p>resume as of January 2024</p>
+        <p><small>resume as of January 2024</small></p>
         </header>
         <hr>
         <p>
