Fixed first list format

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
                 float: left;
                 width: 33.33%;
             }
-            ul li:before { content:"\2713\0020"; }
-            ul{
+            #first-child li:before { content:"\2713\0020"; }
+            #first-child{
                 list-style-type: disc;
             }
         </style>
