--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
         <meta charset="utf-8">
         <title>CSE 204 - Assignment 02 Personal Bio</title>
         <style>
+            h2 {
+                padding: 0;
+                margin: 0;
+            }
             #first-child li{
                 float: left;
                 width: 33.33%;
             }
-            #first-child li:before { content:"\2713\0020"; }
+            #first-child li:before { content: '';  /* placeholder for the SVG */
+  position: absolute;
+  left: 0;  /* place the SVG at the start of the padding */
+  width: 1em;
+  height: 1em;
+  background: url("data:image/svg+xml;utf8,<?xml version='1.0' encoding='utf-8'?><svg width='18' height='18' viewBox='0 0 1792 1792' xmlns='http://www.w3.org/2000/svg'><path d='M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z'/></svg>") no-repeat;
+ }
             #first-child{
                 list-style-type: disc;
             }
