Attempt to fix header spacing

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta charset="utf-8">
         <title>CSE 204 - Assignment 02 Personal Bio</title>
         <style>
+            h1{
+                margin-bottom: 0px;
+            }
             h2 {
-                padding: 0;
+                margin-top: 5px;
             }
             #first-child li{
                 float: left;
@@ -16,7 +19,7 @@
             }
             #first-child{
                 list-style-type: none;
-                padding: 0;
+                margin-bottom: 10px;
             }
         </style>
     </head>
