Fix subheading margins

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <title>CSE 204 - Assignment 02 Personal Bio</title>
         <style>
             h1{
-                margin-bottom: 0px;
+                margin-bottom: -10px;
             }
             h2 {
                 margin-top: 5px;
+                margin-bottom: -10px;
             }
             #first-child li{
                 float: left;
@@ -37,9 +38,8 @@
         <hr>
         <h2>Areas of Expertise</h2>
         <ul id="first-child">
-            <li>Software Development</li> <!--figure out layout, see if you can add checkmarks instead-->
-            <li>Computer Engineering</li> <li>Critical Thinking</li>
-            <li>Systems Engineering</li> <li>Teaching & Development</li> <li>Computer Science</li>
+            <li>Software Development</li> <li>Computer Engineering</li> <li>Critical Thinking</li>
+            <li>Systems Engineering</li> <li>Teaching &amp; Development</li> <li>Computer Science</li>
             <li>Code Review</li> <li>Project Management</li> <li>Team Leadership</li>
         </ul>
         <hr>
