Fixed list's margins

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             }
             #first-child{
                 list-style-type: none;
+            }
+            ul{
+                margin-top: -10px;
                 margin-bottom: 10px;
             }
         </style>
