--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             }
             #first-child{
                 list-style-type: none;
+                margin-top: 0px;
             }
             ul{
                 margin-top: -10px;
@@ -30,7 +31,7 @@
 
     <body>
         <header>
-        <h1>CHARLOTTE LUCAS        <small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></h1> <!--figure out spacing-->
+        <h1>CHARLOTTE LUCAS <small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></h1> <!--figure out spacing-->
         <p><small>resume as of January 2024</small></p>
         </header>
         <hr>
