Attempt to fix first list formatiing

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
                 margin-top: 5px;
                 margin-bottom: -10px;
             }
+            ul{
+                margin-top: -10px;
+                margin-bottom: 10px;
+            }
             #first-child li{
                 float: left;
                 width: 33.33%;
@@ -20,11 +24,7 @@
             }
             #first-child{
                 list-style-type: none;
-                margin-top: 0px;
-            }
-            ul{
-                margin-top: -10px;
-                margin-bottom: 10px;
+                margin-top: 100px;
             }
         </style>
     </head>
@@ -118,11 +118,9 @@ Bold or Strong                                      check
 Italic or Emphasis                                  check
 Horizontal Rule                                     check
 Unordered List or Ordered List                      check
-Links - at least one link to an external website.
+Links - at least one link to an external website.   check
 Doctype                                             check
-A header & footer, with appropriate content.
-ul:first-child  li:before { content:"\2713\0020"; }
-            #triple li { width:33.333%; }
+A header & footer, with appropriate content.        check
 -->
 
 
