--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             }
             #first-child{
                 list-style-type: none;
-                margin-top: 100px;
+                margin-top: 10px;
             }
         </style>
     </head>
 
     <body>
         <header>
-        <h1>CHARLOTTE LUCAS <small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></h1> <!--figure out spacing-->
+        <h1>CHARLOTTE LUCAS &emsp;&emsp;&emsp;<small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></h1> <!--figure out spacing-->
         <p><small>resume as of January 2024</small></p>
         </header>
         <hr>
