Added whitespace to certain lines

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
 
     <body>
         <header>
-        <h1>CHARLOTTE LUCAS &emsp;&emsp;&emsp;<small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></h1> <!--figure out spacing-->
+        <h1>CHARLOTTE LUCAS &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></h1> <!--figure out spacing-->
         <p><small>resume as of January 2024</small></p>
         </header>
         <hr>
         <p>
-            <strong>ASPIRING COMPUTER ENGINEER</strong> <!--figure out strong vs subheader-->
-            leveraging academic experience in conjunction with computer science, critical thinking, and project management skills to design new software programs while guiding teams of students in devising and developing advanced solutions in computer engineering. Detail-oriented engineering student with a proven ability to evaluate complex programs and code to ultimately produce high-functioning software and websites. Determined team player with a history of collaborating with instructional staff to facilitate productive class sessions and drive academic success.
+            <strong>ASPIRING COMPUTER ENGINEER</strong> leveraging academic experience in conjunction with computer science, critical thinking, and project management
+            skills to design new software programs while guiding teams of students in devising and developing advanced solutions in computer engineering. Detail-oriented
+            engineering student with a proven ability to evaluate complex programs and code to ultimately produce high-functioning software and websites. Determined team
+            player with a history of collaborating with instructional staff to facilitate productive class sessions and drive academic success.
         </p>
         <hr>
         <h2>Areas of Expertise</h2>
@@ -62,27 +64,30 @@
         <hr>
         <h2>Professional Experience</h2>
         <p>
-            <strong>Lavner Education</strong> - St. Louis, MO <strong>06/2023 - 08/2023</strong><br><!--figure out spacing-->
+            <strong>Lavner Education</strong> - St. Louis, MO &emsp;&emsp;&emsp;&emsp;<strong>06/2023 - 08/2023</strong><br>
             <i>Information Technology (IT) Intern</i>
         </p>
             <ul>
-                <li>Prepared and delivered educational STEM-focused lessons to students including adding supplemental material as needed and using interpersonal communication skills to drive engagement. </li>
+                <li>Prepared and delivered educational STEM-focused lessons to students including adding supplemental material as needed and using interpersonal communication
+                    skills to drive engagement. </li>
                 <li>Taught a variety of different topics such as coding in C++ and Python, as well as cybersecurity.</li>
                 <li>Assisted with debugging code, project backup, and setup and maintenance of on-site computer hardware, software, and Internet connectivity.</li>
                 <li>Provided troubleshooting and technical support to staff and students as needed and delivered educational instruction to students in the class and during lessons.</li>
             </ul>
         <p>
-            <strong>Washington University in St. Louis</strong> - St. Louis, MO <strong>01/2021 - 05/2023</strong><br><!--figure out spacing-->
+            <strong>Washington University in St. Louis</strong> - St. Louis, MO &emsp;&emsp;&emsp;&emsp;<strong>01/2021 - 05/2023</strong><br>
             <i>Teaching Assistant (Intro to Computer Engineering/Intro to Digital Logic &amp; Computer Design)</i>
         </p>
             <ul>
-                <li>Assisted in the instruction of the courses, assessing student coding work, technical homework, and process diagrams to ensure correct formulations and guarantee system functionality.</li>
-                <li>Provided guidance to students working through troubleshooting technical errors, promoting critical thinking and problem-solving skills, and preparing the class for success on course assessments</li>
+                <li>Assisted in the instruction of the courses, assessing student coding work, technical homework, and process diagrams to ensure correct formulations and guarantee
+                    system functionality.</li>
+                <li>Provided guidance to students working through troubleshooting technical errors, promoting critical thinking and problem-solving skills, and preparing the class
+                    for success on course assessments</li>
             </ul>
         <p>
             <i><u>Additional Experience: </u></i><br>
-            <b>Nubs Nob</b> | Ski Instructor <b>12/2019 - 01/2023</b><br>   <!--figure out spacing-->
-            <b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager <b>03/2017 - 08/2022</b><br>
+            <b>Nubs Nob</b> | Ski Instructor &emsp;&emsp;&emsp;&emsp;<b>12/2019 - 01/2023</b><br>  
+            <b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager &emsp;&emsp;&emsp;&emsp;<b>03/2017 - 08/2022</b><br>
         </p>
         <hr>
         <h2>AFFILIATIONS &amp; AWARDS</h2>
@@ -105,22 +110,9 @@
         </p>
         <hr>
         <footer>
-            <p>Author: Charlotte Lucas <a href="c.k.lucas@wustl.edu">c.k.lucas@wustl.edu</a></p>
+            <p>Author: Charlotte Lucas <a href="clucas0027@gmail.com">clucas0027@gmail.com</a></p>
         </footer>
     </body>
 </html>
-
-<!--
-Title                                               check
-Headings (with at least one sub-heading)            check
-Paragraphs                                          check
-Bold or Strong                                      check
-Italic or Emphasis                                  check
-Horizontal Rule                                     check
-Unordered List or Ordered List                      check
-Links - at least one link to an external website.   check
-Doctype                                             check
-A header & footer, with appropriate content.        check
--->
 
 
