Fixed formatting of header

--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
                 list-style-type: none;
                 margin-top: 10px;
             }
+            .right{
+                float:right;
+            }
+            .left{
+                float:left;
+            }
         </style>
     </head>
 
     <body>
         <header>
-        <h1>CHARLOTTE LUCAS &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></h1> <!--figure out spacing-->
+        <h1><span class="right">CHARLOTTE LUCAS</span><span class="left"><small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></span></h1>
         <p><small>resume as of January 2024</small></p>
         </header>
         <hr>
@@ -104,7 +110,7 @@
             MATLAB | Google Suite | Java | C++ | R | Python | Assembly | VDHL | C | JavaScript | C# | PHP
         </p>
         <hr>
-        <h2>LINKEDIN</h2> <!--see if you can add company logo-->
+        <h2>LINKEDIN</h2>
         <p>
             <a href="https://www.linkedin.com/in/charlotteklucas/">Visit Charlotte Lucas' LinkedIn</a>
         </p>
