Attempt to make left and right alines

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <body>
         <header>
-        <h1><span class="right">CHARLOTTE LUCAS</span><span class="left"><small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></span></h1>
+        <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></span></h1>
         <p><small>resume as of January 2024</small></p>
         </header>
         <hr>
@@ -70,7 +70,7 @@
         <hr>
         <h2>Professional Experience</h2>
         <p>
-            <strong>Lavner Education</strong> - St. Louis, MO &emsp;&emsp;&emsp;&emsp;<strong>06/2023 - 08/2023</strong><br>
+            <span class="left"><strong>Lavner Education</strong> - St. Louis, MO </span><span class="right"><strong>06/2023 - 08/2023</strong></span><br>
             <i>Information Technology (IT) Intern</i>
         </p>
             <ul>
@@ -81,7 +81,7 @@
                 <li>Provided troubleshooting and technical support to staff and students as needed and delivered educational instruction to students in the class and during lessons.</li>
             </ul>
         <p>
-            <strong>Washington University in St. Louis</strong> - St. Louis, MO &emsp;&emsp;&emsp;&emsp;<strong>01/2021 - 05/2023</strong><br>
+            <span class="left"><strong>Washington University in St. Louis</strong> - St. Louis, MO</span><span class="right"><strong>01/2021 - 05/2023</strong></span><br>
             <i>Teaching Assistant (Intro to Computer Engineering/Intro to Digital Logic &amp; Computer Design)</i>
         </p>
             <ul>
@@ -92,8 +92,8 @@
             </ul>
         <p>
             <i><u>Additional Experience: </u></i><br>
-            <b>Nubs Nob</b> | Ski Instructor &emsp;&emsp;&emsp;&emsp;<b>12/2019 - 01/2023</b><br>  
-            <b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager &emsp;&emsp;&emsp;&emsp;<b>03/2017 - 08/2022</b><br>
+            <span class="left"><b>Nubs Nob</b> | Ski Instructor </span><span class="right"><b>12/2019 - 01/2023</b><br></span>
+            <span class="left"><b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager </span><span class="right"><b>03/2017 - 08/2022</b><br></span>
         </p>
         <hr>
         <h2>AFFILIATIONS &amp; AWARDS</h2>
