Fixing line breaks

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <body>
         <header>
-        <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></span></h1>
+        <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></span></h1><br>
         <p><small>resume as of January 2024</small></p>
         </header>
         <hr>
@@ -92,8 +92,8 @@
             </ul>
         <p>
             <i><u>Additional Experience: </u></i><br>
-            <span class="left"><b>Nubs Nob</b> | Ski Instructor </span><span class="right"><b>12/2019 - 01/2023</b><br></span>
-            <span class="left"><b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager </span><span class="right"><b>03/2017 - 08/2022</b><br></span>
+            <span class="left"><b>Nubs Nob</b> | Ski Instructor </span><span class="right"><b>12/2019 - 01/2023</b></span><br>
+            <span class="left"><b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager </span><span class="right"><b>03/2017 - 08/2022</b></span><br>
         </p>
         <hr>
         <h2>AFFILIATIONS &amp; AWARDS</h2>
