--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             }
             #first-child{
                 list-style-type: none;
-                margin-top: 10px;
+                margin-top: 15px;
             }
             .right{
                 float:right;
@@ -38,7 +38,7 @@
     <body>
         <header>
         <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></span></h1><br>
-        <p class="left"><small>resume as of January 2024</small></p>
+        <p><small>resume as of January 2024</small></p>
         </header>
         <hr>
         <p>
