Fixed header indent format

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <body>
         <header>
         <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></span></h1><br>
-        <p><small>resume as of January 2024</small></p>
+        <p class="left"><small>resume as of January 2024</small></p><br>
         </header>
         <hr>
         <p>
